--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/zam-map"]
 	path = lib/zam-map
 	url = https://github.com/ZAM-2025/zam-map
+[submodule "lib/zam-auth"]
+	path = lib/zam-auth
+	url = https://github.com/ZAM-2025/zam-auth
